Logic of Methods Changed